# nomai-engine

./: .gitignore  CLAUDE.md  Cargo.toml  DONE.txt  NOMAI_ENGINE_v8_MVP.md  NOMAI_MVP_PLAN.md  README.md  demo_breakout.py  demo_prism_pop.py  demo_prism_pop_report.json  eval_agent_report.json  eval_baseline_report.json  justfile  run_agent_eval.py  run_eval_baseline.py  snapshot.json
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: manifest-pipeline.md  python-verification.md  renderer.md  rust-engine.md  spike-validator.md  wasm-sandbox.md
.claude/skills/parse-gdd/: SKILL.md
.claude/skills/python-check/: SKILL.md
.claude/skills/run-benchmark/: SKILL.md
.claude/skills/rust-check/: SKILL.md
benchmarks/: spike_a.json  spike_b.json
crates/nomai-ecs/: Cargo.toml
crates/nomai-ecs/benches/: ecs_benchmarks.rs
crates/nomai-ecs/src/: archetype.rs  command.rs  component.rs  entity.rs  identity.rs  lib.rs  query.rs  snapshot.rs  world.rs
crates/nomai-ecs/tests/: proptest_commands.rs  proptest_ecs.rs  snapshot_tests.rs
crates/nomai-engine/: Cargo.toml
crates/nomai-engine/examples/: breakout_visual.rs
crates/nomai-engine/src/: lib.rs  physics.rs  replay.rs  scene.rs  snapshot.rs  tick.rs
crates/nomai-engine/src/render/: annotation.rs  app.rs  mod.rs  renderer.rs  shaders.wgsl  text.rs
crates/nomai-engine/tests/: annotation_tests.rs  headless_toggle_tests.rs  milestone_week1_2.rs  milestone_week4_5.rs  milestone_week6_7.rs  renderer_tests.rs  replay_tests.rs  snapshot_engine_tests.rs  snapshot_physics_tests.rs
crates/nomai-manifest/: Cargo.toml
crates/nomai-manifest/benches/: manifest_benchmarks.rs
crates/nomai-manifest/src/: journal.rs  lib.rs  manifest.rs  scene.rs
crates/nomai-manifest/tests/: scene_tests.rs
crates/nomai-python/: Cargo.toml  pyproject.toml
crates/nomai-python/src/: engine.rs  lib.rs
crates/nomai-wasm-host/: Cargo.toml
crates/nomai-wasm-host/benches/: wasm_benchmarks.rs
crates/nomai-wasm-host/src/: host_api.rs  integration.rs  lib.rs  module.rs
crates/nomai-wasm-host/tests/fixtures/: bad_import.wat  bench_50_calls.wat  buggy_movement.wat  causality_test.wat  correct_movement.wat  counter.wat  counter_v2.wat  env_abort.wat  env_bad_func.wat  fuel_hog.wat  host_api_test.wat  no_tick.wat  noop.wat  trap_test.wat  void_i64.wat  void_i64_i64.wat  wasi_import.wat
crates/nomai-wasm-host/tests/fixtures/b8_manifests/buggy/: tick_1.json  tick_2.json  tick_3.json  tick_4.json  tick_5.json
crates/nomai-wasm-host/tests/fixtures/b8_manifests/correct/: tick_1.json  tick_2.json  tick_3.json  tick_4.json  tick_5.json
docs/: match3-gdd.md
docs/ai/: nomai-sdk-reference.md
docs/plans/: 2026-02-07-gdd-analyzer.md  2026-02-07-issues-33-34-verification-engine.md  2026-02-07-issues-35-36-breakout-intents-milestone.md  2026-02-07-issues-37-40-snapshot-replay-renderer.md  2026-02-07-issues-41-45-e2e-demo.md  2026-02-07-phase1-week1-2-harden-ecs.md  2026-02-07-phase1-week3-4-manifest-python.md  2026-02-07-phase1-week4-5-physics-wasm.md  2026-02-07-spike-b-wasm-verification.md  2026-02-07-verification-gap-fix.md  2026-03-12-eval-framework-design.md  2026-03-12-eval-tier2-tier3.md  2026-03-12-scene-snapshot-design.md  2026-03-14-agent-eval-harness-design.md  2026-03-14-agent-eval-harness.md  2026-03-14-agent-eval-next-steps.md  2026-03-14-autonomous-verification-loop.md  2026-03-14-deep-scoring-design.md  2026-03-14-deep-scoring-plan.md
eval_tasks/: breakout.md
eval_workdir/: .gitignore
gameplay/: package-lock.json  package.json
gameplay/assembly/: breakout.ts  breakout_buggy.ts  game_breakout.ts  host.ts  index.ts  index_buggy.ts  index_prism_pop.ts  my_breakout.ts  prism_pop.ts  test_despawn.ts
python/nomai-sdk/: pyproject.toml
python/nomai-sdk/nomai/: __init__.py  breakout_intents.py  engine.py  gdd.py  gdd_pipeline.py  intents.py  manifest.py  physics_sanity.py  replay.py  scene.py  verify.py
python/nomai-sdk/nomai/eval/: __init__.py  action_prediction.py  agent_harness.py  autonomy.py  bug_corpus.py  controllability.py  llm_client.py  metrics.py  observability.py  reasoning.py  report.py  reproducibility.py  runner.py  scene_qa.py  verification.py
python/nomai-sdk/specs/prism_pop/: spec.json  suite.json
python/nomai-sdk/tests/: test_breakout_intents.py  test_eval.py  test_eval_action_prediction.py  test_eval_agent_harness.py  test_eval_llm.py  test_eval_reasoning.py  test_eval_scene_qa.py  test_gdd.py  test_gdd_pipeline.py  test_integration_b8.py  test_intents.py  test_manifest.py  test_milestone_week3_4.py  test_milestone_week5_6.py  test_scene.py  test_scene_integration.py  test_snapshot_replay.py  test_verification_gap_fix.py  test_verify.py
tests/regression/: breakout_fixed_baseline.json  prism_pop_baseline.json
