[workspace]
resolver = "2"
members = [
    "crates/nomai-ecs",
    "crates/nomai-manifest",
    "crates/nomai-engine",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
bincode = "2.0.0-rc.3"
blake3 = "=1.5.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
thiserror = "2"
anyhow = "1"
