[package]
name = "nomai-engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
nomai-ecs = { path = "../nomai-ecs" }
nomai-manifest = { path = "../nomai-manifest" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
rapier2d = { workspace = true }

[dev-dependencies]
proptest = "1"
