[package]
name = "nomai-manifest"
version = "0.1.0"
edition.workspace = true

[dependencies]
nomai-ecs = { path = "../nomai-ecs" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "manifest_benchmarks"
harness = false
