[package]
name = "nomai-python"
version = "0.1.0"
edition.workspace = true

[lib]
name = "_engine"
crate-type = ["cdylib"]

[dependencies]
nomai-ecs = { path = "../nomai-ecs" }
nomai-engine = { path = "../nomai-engine" }
nomai-manifest = { path = "../nomai-manifest" }
nomai-wasm-host = { path = "../nomai-wasm-host" }
pyo3 = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
