[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nomai-sdk"
version = "0.1.0"
description = "Python SDK for the Nomai Engine -- intent specs, verification engine, manifest queries"
requires-python = ">=3.12"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pyright>=1.1.350",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
